Add test for feed publisher